[gd_scene load_steps=3 format=3 uid="uid://dt1ux4hn70lwd"]

[ext_resource type="Script" path="res://Scenes/Options/Options.gd" id="1_iyqnp"]
[ext_resource type="Theme" uid="uid://qpjfkm1dnyec" path="res://Resources/baseTheme.tres" id="2_q863e"]

[node name="Options" type="Node2D"]
script = ExtResource("1_iyqnp")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 1009.0
offset_bottom = 332.0
color = Color(0.427451, 0.254902, 0, 1)

[node name="chkNatureReserve" type="CheckBox" parent="."]
offset_left = 8.0
offset_top = 129.0
offset_right = 244.0
offset_bottom = 173.0
theme = ExtResource("2_q863e")
text = "Nature Reserves"

[node name="chkUniversity" type="CheckBox" parent="."]
offset_left = 12.0
offset_top = 85.0
offset_right = 188.0
offset_bottom = 129.0
theme = ExtResource("2_q863e")
text = "Universities"

[node name="chkPark" type="CheckBox" parent="."]
offset_left = 17.0
offset_top = 45.0
offset_right = 115.0
offset_bottom = 89.0
theme = ExtResource("2_q863e")
text = "Parks"

[node name="Label" type="Label" parent="."]
offset_right = 40.0
offset_bottom = 23.0
theme = ExtResource("2_q863e")
text = "Place Types to suggest:"

[node name="chkCemetery" type="CheckBox" parent="."]
offset_left = 8.0
offset_top = 169.0
offset_right = 178.0
offset_bottom = 213.0
theme = ExtResource("2_q863e")
text = "Cemeteries"

[node name="chkHistorical" type="CheckBox" parent="."]
offset_left = 11.0
offset_top = 222.0
offset_right = 158.0
offset_bottom = 266.0
theme = ExtResource("2_q863e")
text = "Historical"

[node name="chkArtsCulture" type="CheckBox" parent="."]
offset_left = 9.0
offset_top = 269.0
offset_right = 243.0
offset_bottom = 313.0
theme = ExtResource("2_q863e")
text = "Arts and Culture"

[node name="btnClose" type="Button" parent="."]
offset_left = 787.0
offset_top = 266.0
offset_right = 968.0
offset_bottom = 310.0
theme = ExtResource("2_q863e")
text = "Close Options"

[node name="chkBatterySaver" type="CheckBox" parent="."]
offset_left = 696.0
offset_top = 62.0
offset_right = 888.0
offset_bottom = 93.0
theme = ExtResource("2_q863e")
text = "Battery Saver (30FPS)"

[node name="Label2" type="Label" parent="."]
offset_left = 285.0
offset_top = 148.0
offset_right = 605.0
offset_bottom = 175.0
theme = ExtResource("2_q863e")
text = "Server for drawable tile data:"

[node name="txtServer" type="LineEdit" parent="."]
offset_left = 622.0
offset_top = 141.0
offset_right = 997.0
offset_bottom = 172.0

[node name="Button" type="Button" parent="."]
offset_left = 333.0
offset_top = 183.0
offset_right = 598.0
offset_bottom = 218.0
theme = ExtResource("2_q863e")
text = "Reset to Default Server"

[connection signal="toggled" from="chkNatureReserve" to="." method="UpdateNatureReserve"]
[connection signal="toggled" from="chkUniversity" to="." method="UpdateUniversity"]
[connection signal="toggled" from="chkPark" to="." method="UpdatePark"]
[connection signal="toggled" from="chkCemetery" to="." method="UpdateCemetery"]
[connection signal="toggled" from="chkHistorical" to="." method="UpdateHistorical"]
[connection signal="toggled" from="chkArtsCulture" to="." method="UpdateArtsCulture"]
[connection signal="pressed" from="btnClose" to="." method="Close"]
[connection signal="text_changed" from="txtServer" to="." method="UpdateServer"]
